@@ -3,7 +3,7 @@ package-as: VanasKoS
 manual-changelog: changelog.txt
 
 externals:
-	Libs/LibStub: svn://svn.wowace.com/wow/libstub/mainline/tags/1.0.2-60000
+	Libs/LibStub: svn://svn.wowace.com/wow/libstub/mainline/tags/1.0.2.60000
 	Libs/CallbackHandler-1.0: svn://svn.wowace.com/wow/callbackhandler/mainline/tags/1.0.7/CallbackHandler-1.0
 	Libs/AceAddon-3.0: svn://svn.wowace.com/wow/ace3/mainline/tags/Release-r1122/AceAddon-3.0
 	Libs/AceHook-3.0: svn://svn.wowace.com/wow/ace3/mainline/tags/Release-r1122/AceHook-3.0
@@ -17,7 +17,7 @@ externals:
 	Libs/AceGUI-3.0: svn://svn.wowace.com/wow/ace3/mainline/tags/Release-r1122/AceGUI-3.0
 	Libs/AceConsole-3.0: svn://svn.wowace.com/wow/ace3/mainline/tags/Release-r1122/AceConsole-3.0
 	Libs/AceConfig-3.0: svn://svn.wowace.com/wow/ace3/mainline/tags/Release-r1122/AceConfig-3.0
-	Libs/LibSharedMedia-3.0: svn://svn.wowace.com/wow/libsharedmedia-3-0/mainline/tags/7LibSharedMedia-3.0
+	Libs/LibSharedMedia-3.0: svn://svn.wowace.com/wow/libsharedmedia-3-0/mainline/tags/7/LibSharedMedia-3.0
 	Libs/LibDBIcon-1.0: svn://svn.wowace.com/wow/libdbicon-1-0/mainline/tags/r40-release/LibDBIcon-1.0
 	Libs/LibLevelGuess-1.0: svn://svn.wowace.com/wow/liblevelguess-1-0/mainline/tags/v1.1/LibLevelGuess-1.0
 
