@@ -2,8 +2,10 @@ Release Changelog for VanasKoS
 
 4.48:
 - Fixed own name from appearing in warning frame
+- Fixed coloring of warning frame in and out of combat
 - Updated POI icons for death, and tie
 - Fixed minor localization problems
+- Fixed libraries in .pkgmeta
 
 4.47:
 - Updated database to use Map Area IDs rather than zone text
